--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jonas' Blog
+name: Zen And The Art Of Programming
 
 # Short bio or description (displayed in the header)
-description: Developer
+description: Finding myself by letting go of my self.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/11842335?v=3&s=460
+avatar: 
 
 #
 # Flags below are optional
