--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Zen And The Art Of Programming
 
 # Short bio or description (displayed in the header)
-description: Finding myself by letting go of my self.
+description: Finding myself by letting go of my self
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar:
 
 #
 # Flags below are optional
