--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Zen And The Art Of Programming
 description: Finding myself by letting go of my self
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: https://avatars1.githubusercontent.com/u/11842335?v=3&s=460
 
 #
 # Flags below are optional
